# algorithms-and-data

./: .gitignore  Makefile  README.md  pyproject.toml
src/data/: lists.py  nodes.py
tests/data/: test_lists.py  test_nodes.py
