[tool.poetry]
name = "algorithms-and-data"
version = "0.1.0"
description = "Playground for algorithms and data structures recap."
authors = ["Flavio Alles <flavio.alles@proton.me>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipython = "~8.26"
black = "~24.4"
mypy = "~1.10"
pytest = "~8.2"
pytest-cov = "~5.0"
ipdb = "~0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
